[gd_scene load_steps=8 format=3 uid="uid://dafw0yxq5cvep"]

[ext_resource type="Script" uid="uid://bcyrhu1fsojdt" path="res://Main_menu/menu/game_level.gd" id="1_uxngw"]
[ext_resource type="Texture2D" uid="uid://bnbou8gqeck0p" path="res://Main_menu/Image/Gamelevel.jpg" id="2_uxngw"]
[ext_resource type="AudioStream" uid="uid://6i4ohnbe15d5" path="res://Main_menu/Audios/Boris - Mystery Tension.mp3" id="3_3eenj"]
[ext_resource type="PackedScene" uid="uid://2qug76wnw8xm" path="res://Main_menu/Pause_Menu/pause_menu.tscn" id="4_tyhta"]

[sub_resource type="SystemFont" id="SystemFont_uxngw"]
font_names = PackedStringArray("Times New Roman")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wy5st"]

[sub_resource type="SystemFont" id="SystemFont_5vbcs"]
font_names = PackedStringArray("Times New Roman")

[node name="Game_level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uxngw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_uxngw")

[node name="Chapter1" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.439063
anchor_top = 0.383333
anchor_right = 0.581249
anchor_bottom = 0.452778
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.886275, 0.705882, 0.317647, 1)
theme_override_colors/font_pressed_color = Color(0.886275, 0.705882, 0.317647, 1)
theme_override_fonts/font = SubResource("SystemFont_uxngw")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_wy5st")
text = "Chapter 1 "
metadata/_edit_use_anchors_ = true

[node name="Chapter2" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.203125
anchor_top = 0.483425
anchor_right = 0.353125
anchor_bottom = 0.552869
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.886275, 0.705882, 0.317647, 1)
theme_override_colors/font_pressed_color = Color(0.886275, 0.705882, 0.317647, 1)
theme_override_fonts/font = SubResource("SystemFont_uxngw")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_wy5st")
text = "Chapter 2 "
metadata/_edit_use_anchors_ = true

[node name="Chapter3" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.435937
anchor_top = 0.572222
anchor_right = 0.582812
anchor_bottom = 0.641667
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.886275, 0.705882, 0.317647, 1)
theme_override_colors/font_pressed_color = Color(0.886275, 0.705882, 0.317647, 1)
theme_override_fonts/font = SubResource("SystemFont_uxngw")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_wy5st")
text = "Chapter 3 "
metadata/_edit_use_anchors_ = true

[node name="Chapter4" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.642187
anchor_top = 0.48895
anchor_right = 0.784375
anchor_bottom = 0.558395
offset_right = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.886275, 0.705882, 0.317647, 1)
theme_override_colors/font_pressed_color = Color(0.886275, 0.705882, 0.317647, 1)
theme_override_fonts/font = SubResource("SystemFont_uxngw")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_wy5st")
text = "Chapter 4 "
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3875
anchor_top = 0.183333
anchor_right = 0.617188
anchor_bottom = 0.258333
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_5vbcs")
theme_override_font_sizes/font_size = 27
text = "Game Levles"
metadata/_edit_use_anchors_ = true

[node name="Back_Button" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.440625
anchor_top = 0.761111
anchor_right = 0.582812
anchor_bottom = 0.830556
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.886275, 0.705882, 0.317647, 1)
theme_override_colors/font_pressed_color = Color(0.886275, 0.705882, 0.317647, 1)
theme_override_fonts/font = SubResource("SystemFont_uxngw")
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource("StyleBoxEmpty_wy5st")
text = "Back "
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3eenj")
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pause_Menu" parent="CanvasLayer" instance=ExtResource("4_tyhta")]
visible = false
